previous error now removed, created note class

--- a/specRunner.html
+++ b/specRunner.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module" src="test-lib.js"></script>
+    <!-- <script type="module" src="test-lib.js"></script> -->
+    <script src="note.js"></script>
     <script src="note-tests.js"></script>
-
     <script src="note-model.js"></script>
   </body>
 </html>
