First passing test. isEqual works

--- a/specRunner.html
+++ b/specRunner.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script type="module" src="test-lib.js"></script> -->
+    <script src="test-lib.js"></script>
     <script src="note.js"></script>
     <script src="note-tests.js"></script>
     <script src="note-model.js"></script>
