in the middle of creating not list model

--- a/specRunner.html
+++ b/specRunner.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="test-lib.js"></script>
-    <script src="note.js"></script>
-    <script src="note-tests.js"></script>
     <script src="note-model.js"></script>
+    <script src="test-lib.js"></script>
+    <script src="note-tests.js"></script>
+    <script src="note-list-tests.js"></script>
   </body>
 </html>
