--- a/specRunner.html
+++ b/specRunner.html
@@ -6,10 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="note-model.js"></script>
-    <script src="note-list-model.js"></script>
     <script src="test-lib.js"></script>
-    <script src="note-tests.js"></script>
-    <script src="note-list-tests.js"></script>
+
+    <script src="src/note-model.js"></script>
+    <script src="src/note-list-model.js"></script>
+    <script src="src/note-list-view.js"></script>
+
+    <script src="spec/note-tests.js"></script>
+    <script src="spec/note-list-tests.js"></script>
+    <script src="spec/note-list-view-tests.js"></script>
   </body>
 </html>
