--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello page</title>
+    <script src="./src/note-controller.js"></script>
   </head>
 
   <body>
