--- a/specRunner.html
+++ b/specRunner.html
@@ -8,12 +8,12 @@
   <body>
     <script src="test-lib.js"></script>
 
-    <script src="src/note-model.js"></script>
-    <script src="src/note-list-model.js"></script>
-    <script src="src/note-list-view.js"></script>
+    <script src="public/src/note-model.js"></script>
+    <script src="public/src/note-list-model.js"></script>
+    <script src="public/src/note-list-view.js"></script>
 
-    <script src="spec/note-tests.js"></script>
-    <script src="spec/note-list-tests.js"></script>
-    <script src="spec/note-list-view-tests.js"></script>
+    <script src="public/spec/note-tests.js"></script>
+    <script src="public/spec/note-list-tests.js"></script>
+    <script src="public/spec/note-list-view-tests.js"></script>
   </body>
 </html>
