note controller test started. WIP

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Hello page</title>
     <script src="./src/note-controller.js"></script>
+    <script src="./src/note-list-model.js"></script>
+    <script src="./src/note-list-view.js"></script>
+    <script src="./src/note-model.js"></script>
   </head>
 
   <body>
@@ -11,5 +14,4 @@
       <p>hello</p>
     </div>
   </body>
-
 </html>
