--- a/specRunner.html
+++ b/specRunner.html
@@ -11,9 +11,11 @@
     <script src="public/src/note-model.js"></script>
     <script src="public/src/note-list-model.js"></script>
     <script src="public/src/note-list-view.js"></script>
+    <script src="public/src/note-controller.js"></script>
 
     <script src="public/spec/note-tests.js"></script>
     <script src="public/spec/note-list-tests.js"></script>
     <script src="public/spec/note-list-view-tests.js"></script>
+    <script src="public/spec/note-controller-tests.js"></script>
   </body>
 </html>
