SingleNoteView class created and tested that it can be instantiated

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
     <div id="app">
       <p>hello</p>
     </div>
-  <script src="./src/note-model.js"></script>
-  <script src="./src/note-list-model.js"></script>
-  <script src="./src/note-list-view.js"></script>
-  <script src="./src/note-controller.js"></script>
+    <script src="./src/note-model.js"></script>
+    <script src="./src/note-list-model.js"></script>
+    <script src="./src/note-list-view.js"></script>
+    <script src="./src/note-controller.js"></script>
+    <script src="./src/single-note-view.js"></script>
   </body>
 </html>
