--- a/specRunner.html
+++ b/specRunner.html
@@ -12,10 +12,13 @@
     <script src="public/src/note-list-model.js"></script>
     <script src="public/src/note-list-view.js"></script>
     <script src="public/src/note-controller.js"></script>
+    <script src="public/src/single-note-view.js"></script>
 
     <script src="public/spec/note-tests.js"></script>
     <script src="public/spec/note-list-tests.js"></script>
     <script src="public/spec/note-list-view-tests.js"></script>
     <script src="public/spec/note-controller-tests.js"></script>
+
+    <script src="public/spec/single-note-view-test.js"></script>
   </body>
 </html>
