--- a/specRunner.html
+++ b/specRunner.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+      <div id="placeholder"></div>
     <script src="test-lib.js"></script>
 
     <script src="public/src/note-model.js"></script>
@@ -20,5 +21,6 @@
     <script src="public/spec/note-controller-tests.js"></script>
 
     <script src="public/spec/single-note-view-test.js"></script>
+    <script src="public/spec/specController.js"></script> 
   </body>
 </html>
