--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     <div id="app">
       <p>hello</p>
     </div>
+  <form id ="text" action="#new/" action="post">
+  <textarea name="" id="" cols="30" rows="10"></textarea>
+  <input type="submit" name="Submit" ></input>
+  </form>
+
+
+
+
     <script src="./src/note-model.js"></script>
     <script src="./src/note-list-model.js"></script>
     <script src="./src/note-list-view.js"></script>
